# patchwork

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  app.py  db.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  sample_project.yaml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
docker/nginx/: Dockerfile  default.conf  docker-entrypoint-ssl.sh
docs/: api.md  index.md  integrated-wiring-user-guide.md  overview.md
docs/onboarding/: README.en.md  README.ja.md
docs/onboarding/images/: README.md
docs/onboarding/scenarios/: mixed-4rack.en.md  mixed-4rack.ja.md  simple-2rack.en.md  simple-2rack.ja.md
examples/: project.yaml
examples/onboarding/: mixed-4rack.yaml  simple-2rack.yaml
examples/quick-start/: README.md  sample-project-10rack-200links.yaml  sample-project-3rack-35links.yaml  sample-project.yaml
services/: __init__.py  allocator.py  export.py  render_svg.py
templates/: base.html  diff.html  project_detail.html  revision_detail.html  save.html  trial.html  upload.html
tests/: conftest.py  test_acceptance_smoke.py  test_allocation_direction.py  test_allocator_acceptance.py  test_allocator_lc.py  test_allocator_mixed_u.py  test_allocator_mpo.py  test_allocator_utp.py  test_db.py  test_dc_wiring_sufficiency.py  test_docker_compose.py  test_export.py  test_models.py  test_models_validation.py  test_onboarding_samples.py  test_peer_sort.py  test_review_fixes.py  test_slot_category_priority.py
