[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchwork"
version = "0.1.0"
description = "Data Center Rack-to-Rack Patch Cabling Design Assistant"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0.0",
  "gunicorn>=23.0.0",
  "pyyaml>=6.0.1",
  "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "black>=24.0.0",
  "pre-commit>=3.7.0",
]

[tool.setuptools]
packages = ["services"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
exclude = ["tests/"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["services.allocator", "services.export", "services.render_svg"]
ignore_errors = true
